<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="@dimen/dimens_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bulletin_detail_theme"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />

                <TextView
                    android:id="@+id/bulletin_detail_theme_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />
            </LinearLayout>

            <View
                android:id="@+id/view_1_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bulletin_detail_message"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />

                <TextView
                    android:id="@+id/bulletin_detail_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/bulletin_detail_principal"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />

                <TextView
                    android:id="@+id/bulletin_detail_principal_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />
            </LinearLayout>

            <View
                android:id="@+id/view_2_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/bulletin_detail_start_date"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />

                <TextView
                    android:id="@+id/bulletin_detail_start_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />
            </LinearLayout>

            <View
                android:id="@+id/view_3_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/bulletin_detail_end_date"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />

                <TextView
                    android:id="@+id/bulletin_detail_end_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"></View>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
