<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/information_linear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottombg"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/information_image"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingTop="3dp"
                android:src="@drawable/ic_information" />

            <TextView
                android:id="@+id/information_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tab_home"
                android:textColor="@color/black_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/business_linear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottombg"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/business_image"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingTop="3dp"
                android:src="@drawable/ic_workorder" />

            <TextView
                android:id="@+id/business_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tab_business"
                android:textColor="@color/black_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottombg"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_linear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottombg"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/search_image"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingTop="3dp"
                android:src="@drawable/ic_business" />

            <TextView
                android:id="@+id/search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tab_search"
                android:textColor="@color/black_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_linear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottombg"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/setting_iamge"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingTop="3dp"
                android:src="@drawable/ic_set" />

            <TextView
                android:id="@+id/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tab_setting"
                android:textColor="@color/black_color" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="2dp" >

        <ImageView
            android:id="@+id/scanning_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_tdcbg"
            android:orientation="horizontal"
            android:scaleType="center"
            android:src="@drawable/ic_tdc" >
        </ImageView>
    </FrameLayout>

</RelativeLayout>